Name:                toy-diagrams
Version:             0.3.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using toy backends with diagrams.
Category:            Graphics, GUI
Description:         Provides minimal implementations of arranging UI widgets,
                     along with customizable buttons / handles / sliders.
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple
Source-repository head
  type:              git
  location:          https://github.com/mgsloan/toy-diagrams

Library
  Build-Depends:     base,
                     containers,
                     colour,
                     data-default,
                     diagrams-lib,
                     diagrams-core >= 0.7 && < 0.8,
                     diagrams-contrib,
                     lens >= 3.9 && < 3.10,
                     MemoTrie,
                     semigroups,
                     toy-interface >= 0.3.0 && < 0.4.0,
                     vector-space,
                     vector-space-points
  Hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -O2
  Exposed-Modules:
    Graphics.UI.Toy.Button
    Graphics.UI.Toy.Diagrams
    Graphics.UI.Toy.Dict
    Graphics.UI.Toy.Draggable
--    Graphics.UI.Toy.Slider
    Graphics.UI.Toy.Transformed
