Name:                toy-diagrams
Version:             0.3.0
Cabal-Version:       >= 1.8
Synopsis:            Utilities for using toy-interface backends with diagrams
Category:            Graphics
Description:
  toy-diagrams provides a few widgets for interactive diagrams - things like
  buttons / handles / sliders - as well as ways to combine these interactive
  diagrams together.These are implemented in a backend / vectorspace agnostic
  fashion, allowing the same code to possibly be used in multiple contexts.
  .
  The name \"toy\" comes from the \"toy framework\", a part of the lib2geom
  library (<http://lib2geom.sourceforge.net/>).  It's used in building \"toys\"
  demonstrating the features of the library.  This is a different variety of
  \"TDD\"- but instead of tests, it's toys! We found that building little demos
  to be a nice way to drive initial design / development.
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple
Source-repository head
  type:              git
  location:          https://github.com/mgsloan/toy-diagrams

Library
  Build-Depends:     base,
                     containers,
                     colour,
                     data-default,
                     diagrams-lib,
                     diagrams-core >= 0.7 && < 0.8,
                     diagrams-contrib,
                     lens >= 3.9 && < 3.10,
                     MemoTrie,
                     semigroups,
                     toy-interface >= 0.3.0 && < 0.4.0,
                     vector-space,
                     vector-space-points
  Hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -O2
  Exposed-Modules:
    Graphics.UI.Toy.Button
    Graphics.UI.Toy.Diagrams
    Graphics.UI.Toy.Dict
    Graphics.UI.Toy.Draggable
--    Graphics.UI.Toy.Slider
    Graphics.UI.Toy.Transformed
